Responsive for mobile device

--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,20 @@
   --color-btn-blue: #00B4FF;
 }
 
+.swiper {
+  width: 100%;
+  max-width: 100vw;
+}
+
+/* Hide scrollbars for the category tab strip but keep it scrollable */
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+.scrollbar-hide {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
 @layer base {
 body {
   font: "Lato", sans-serif;
